[package]
name = "solana-ed25519-instruction"
version = "0.1.0"
description = "Deserialization for Ed25519 instruction data"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ed25519_instruction"

[features]

[dependencies]
borsh = "^0.10.0"
solana-program = "^2.0.0"